Cleaning up the code

--- a/firebase.json
+++ b/firebase.json
@@ -5,6 +5,17 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/shopping-list"
+      },
+      {
+        "source": "**",
+        "destination": "/shopping-list",
+        "type": 404
+      }
     ]
   }
 }
